Week8/redis_subnet_group.tf
# resource "aws_elasticache_subnet_group" "redis_subnet_group" {
#   name       = "redis-subnet-group"
#   subnet_ids = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]
# }

# resource "aws_security_group" "redis_sg" {
#   name        = "redis-security-group"
#   description = "Allow Redis access from app servers"
#   vpc_id      = aws_vpc.main.id

#   ingress {
#     from_port       = 6379
#     to_port         = 6379
#     protocol        = "tcp"
#     security_groups = [aws_security_group.app_sg.id] # Only app servers can connect
#   }

#   egress {
#     from_port   = 0
#     to_port     = 0
#     protocol    = "-1"
#     cidr_blocks = ["0.0.0.0/0"]
#   }
# }

# resource "aws_elasticache_cluster" "redis" {
#   cluster_id           = "redis-cluster"
#   engine               = "redis"
#   node_type            = "cache.t3.micro"
#   num_cache_nodes      = 1
#   parameter_group_name = "default.redis6.x"
#   subnet_group_name    = aws_elasticache_subnet_group.redis_subnet_group.name
#   security_group_ids   = [aws_security_group.redis_sg.id]
# }
